docs/requirements/v4.5.2/REQUIREMENTS.md

Requirements Summary
====================

# default

## As a user, I want to only search amongst the latest versions of products ([#83](https://github.com/NASA-PDS/registry-legacy-solr/issues/83)) 


This requirement is not impacted by the current version
## As a user, I want to ingest Product_External products into the Registry ([#8](https://github.com/NASA-PDS/registry-legacy-solr/issues/8)) 


This requirement is not impacted by the current version
## As a user, I want to provide search/access links using the hsk.cat files within the data set ([#93](https://github.com/NASA-PDS/registry-legacy-solr/issues/93)) 


This requirement is not impacted by the current version
## As a user, I want to sync ESA PSA products from the Search API ([#135](https://github.com/NASA-PDS/registry-legacy-solr/issues/135)) 


This requirement is not impacted by the current version
## As a user, I want to provide a data input path via command-line ([#179](https://github.com/NASA-PDS/registry-legacy-solr/issues/179)) 


This requirement is not impacted by the current version
## As a user, I want to search by the new List_Author and List_Editor attributes ([#199](https://github.com/NASA-PDS/registry-legacy-solr/issues/199)) 


This requirement is not impacted by the current version
## As a user, I want to load and search Product_Externals ([#201](https://github.com/NASA-PDS/registry-legacy-solr/issues/201)) 


This requirement is not impacted by the current version
## As a user, I want to load instrument context products that use the CTLI LDD to specify instrument type ([#206](https://github.com/NASA-PDS/registry-legacy-solr/issues/206)) 


This requirement is not impacted by the current version